--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,16 @@
-apply plugin: "com.android.application"
-apply plugin: "kotlin-android"
-apply plugin: "kotlin-android-extensions"
-apply plugin: "androidx.navigation.safeargs.kotlin"
-apply plugin: "kotlin-kapt"
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+
+    id "scabbard.gradle"
+}
+
 apply from: "../versions.gradle"
+
 
 android {
     compileSdkVersion 30
@@ -17,7 +24,8 @@ android {
         testInstrumentationRunner "ru.skillbranch.skillarticles.CustomTestRunner"
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString(),
+                              "room.incremental"   : "true"]
             }
         }
     }
@@ -47,15 +55,21 @@ android {
     }
 }
 
+scabbard{
+    enabled true
+    failOnError true
+    outputFormat "svg"
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
-    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
@@ -96,10 +110,20 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
     implementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
 
-    // Activity KTX
+    // Activity KTX + Fragment KTX
     implementation "androidx.activity:activity-ktx:$activity_version"
-    // Fragment KTX
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+    //Lottie
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    // Dagger + Hilt
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$androidx_hilt"
+    kapt "androidx.hilt:hilt-compiler:$androidx_hilt"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
@@ -113,7 +137,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'com.jraska.livedata:testing-ktx:1.1.2'
-    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    androidTestImplementation 'androidx.arch.core:core-testing:2.0.0'
     debugImplementation 'androidx.fragment:fragment-testing:1.2.5'
 
 }
